# github-actions-test-gtk

./: README.md  meson.build
.github/workflows/: build-test.yaml
po/: github-actions-test-gtk.pot  ja.po
src/: main.c  meson.build
